# sand-art

./: .gitignore  README.md
amr2/turtlebot4_goal/: package.xml  setup.cfg  setup.py
amr2/turtlebot4_goal/turtlebot4_goal/: config.py  emergency_beep_node.py  mission_node.py  path_by_node.py  sucessful_beep_node.py  transform.py  yolo_detect_node.py
server/: test.py
src/launch/: sandart.launch.py
src/sandart/: lifecycle_manage_node.py  package.xml  sandart_movesx_node.py  setup.cfg  setup.py  skeleton_processor_node.py
src/sandart/launch/: sandart.launch.py
src/sandart/sandart/: lifecycle_manage_node.py  path_plan_node.py  sand_clear_node.py  sandart_movesx_node.py  skeleton_processor_node.py
src/sandart_hmi/sandart/: app.py  strokes_20260710_154116.txt  strokes_20260710_154432.txt
src/sandart_hmi/sandart/dialogs/: __init__.py  image_preview_dialog.py  setting_dialog.py
src/sandart_hmi/sandart/pages/: drawing_page.py  edge_page.py  finish_page.py  gray_page.py  image_page.py  parameter_page.py  sand_preview_page.py  start_page.py
src/sandart_hmi/sandart/ros/: __init__.py  process_image_client.py  robot_status_monitor.py  start_drawing_client.py
src/sandart_hmi/sandart/styles/: dark_theme.qss
src/sandart_hmi/sandart/ui/: main_window.py
src/sandart_msgs/: CMakeLists.txt  package.xml
src/sandart_msgs/msg/: Bond.msg  DrawingProgress.msg  SandStroke.msg
src/sandart_msgs/srv/: PathPlanList.srv  ProcessImage.srv  StartDrawing.srv  TripleLayerdImages.srv  TripleLayeredImages.srv
